sheet_files/sheets.css
<style type="text/css">

:root {
	--warn-col: 204, 0, 0;
}

body {
    background-color: #fdfdfd;
    color: rgb(var(--font-col));
	overflow-x: hidden;
}

#header {
    padding-top: 20px;
    padding-bottom: 40px;
}

#header::after {
    width: 300%;
    z-index: -1;
    content: '';
    background-color: rgb(var(--theme-col));
    height: var(--header-height);
    position: absolute;
    top: 0;
    left: -100%;
}

h1.title {
    font-size: 50px;
    color: #fdfdfd;
}

@media screen and (max-width: 620px) {  
  h1.title {
    font-size: 40px;
  }
}

.tocify {
	border-color: #3b587533;
	border-radius: 1px;
	position: relative;
}

.tocify-extend-page {
    height: 50px !important;
}

div .tocify {
	width: 100%;
}

#TOC {
  margin: var(--toc-offset) 0px 20px 0px;
}

.sticky {
  position: fixed;
  margin-top: 20px !important;
}

@media screen and (max-width: 767px) {  
  #TOC {
	margin-top: 20px;
  }
  
  .sticky {
	position: relative;
	margin-top: 10px !important;
  }
}
  

.list-group-item.active, .list-group-item.active:focus {
    z-index: 2;
	color: #fff;
    background-color: rgb(var(--theme-col));
    border-color: #3d5063;
}

.list-group-item.active:hover {
    z-index: 2;
	color: rgb(var(--font-col));
    background-color: rgb(var(--theme-col));
    border-color: #3d5063;

}

a:hover, .tocify-item a:hover, .tocify .list-group-item:hover {
    color: rgb(var(--theme-col));
    background-color: #fdfdfd;
}

a {
	color: #4674ff;
}

.date a {
    color: #fdfdfd;
}

.date a:hover {
    color: rgb(var(--font-col));
    background-color: inherit;
	text-decoration: none;
}

ul {
    list-style: disc;
}

pre {
    border-radius: 1px;
	background-color: #fff
}

code {
	background: none;
	font-size: 115%;	
	padding-right: 0px
}

pre.sourceCode {
	background-color: #fff;
}

blockquote {
	border-left: none;
    color: #959595;
	font-style: italic;
}

blockquote p::before {
    content: open-quote;
    font-size: 5em;
    font-family: times;
    font-weight: bolder;
    color: #b6b6b6;
    height: 70px;
    font-style: initial;
    padding: 0;
    margin-top: -40px;
    margin-left: -50px;
    float: left;
}

kbd {
    padding: 2px 4px;
    font-size: 90%;
    color: rgb(var(--font-col));
	background-color: #efefef;
    border-radius: 3px;
    box-shadow: none;
    border: solid 1px;
}

.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
    color: #fdfdfd;
    background-color: rgb(var(--theme-col));
	border: none;
	border-bottom: 1px solid transparent;
}

.nav > li > a:focus {
	outline: none;
}

.nav-tabs > li > a:hover {
    background-color: white;
}

.nav-tabs > li > a:hover {
    border-color: rgba(var(--font-col), .5);
}

.nav-tabs {
	border-bottom-color: rgba(var(--font-col), .5);
}

hr {
	border-top-color: rgba(var(--font-col), .5);
}

.caption {
    font-size: .85em;
}

details {
    border: solid 1px rgb(var(--theme-col));
    width: 6em;
    border-radius: 5px;
    margin: 1em 0 2em 0;
    background-color: rgb(var(--theme-col));
	padding: .5em
}

details[open] {
	width: 100%;
    background-color: rgba(var(--theme-col), .3);
}

summary {
	display: list-item;
	cursor: pointer;
	outline: 0;
	color: #fdfdfd;
}

details[open] > summary {
    padding-bottom: 1em;
	color: rgb(var(--font-col));
}

details > .sourceCode {
	margin-top: 0
}

details > .pagedtable-wrapper,
.warn > .pagedtable-wrapper,
.why > .pagedtable-wrapper,
.solution >  .pagedtable-wrapper,
.writeUp >  .pagedtable-wrapper,
.solText >  .pagedtable-wrapper {
	background-color: #fdfdfd;
}

.why::before {
    content: "What for?";
	text-transform: uppercase;
	margin-top: -40px;
	font-weight: bolder;
	font-size: 2em;
	color: rgb(var(--theme-col));
	display: block;
	transform: translateX(80%);
}

.why {
    margin-top: 4em;
    border: solid 1px rgb(var(--theme-col));
    padding: 10px;
    position: relative;
    background-color: rgba(var(--theme-col), .3);
}

.solution pre.sourceCode::before {
    content: 'Solution';
	display: block;
	font-size: 25px;
	color: rgb(var(--theme-col));
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	margin-bottom: 10px;
}

.solution .sourceCode {
	border-color: rgb(var(--theme-col));
}

.writeUp, .solText {
    border: solid 1px rgb(var(--theme-col));
    padding: 1em 1em 0.5em 1em;
    background-color: rgba(var(--theme-col), .3);
    margin-bottom: 3em;
}

.solText > title {
    font-size: 20px;
    color: rgb(var(--theme-col));
	display: block;
	margin-top: 10px;
	margin-bottom: 5px;
}

.solText a:hover, .why a:hover, .writeUp a:hover {
    background-color: transparent;
}

.solText a, .why a, .writeUp a {
    color: rgb(var(--theme-col));
}

warn {
    font-weight: bold;
    color: rgb(var(--warn-col));
}

.warn {
    border: solid 1px rgb(var(--warn-col));
    padding: 1em 1em 0.5em 1em;
    background-color: rgba(var(--warn-col), .3);
    margin-bottom: 3em;
}

.warn > h3, .warn > h4, .warn > h5 {
    font-size: 20px;
    color: rgb(var(--warn-col));
	margin-top: 10px;
}

.warn strong {
    color: rgb(var(--warn-col));
}

.warn a:hover {
    background-color: transparent;
}

.warn a {
    color: rgb(var(--warn-col));
}

.warn::before {
    content: "!";
    font-family: "Times";
    font-weight: bolder;
    font-size: 5em;
    color: rgb(var(--warn-col));
    margin-top: -37px;
    margin-left: -40px;
    float: left;
}

.solText > .warn {
    width: max-content;
    margin: 1em auto;
    max-width: 95%;
}

.writeUp::before {
    content: "Write-up";
    font-size: 25px;
    color: rgb(var(--theme-col));
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    display: block;
}

.writeUp:not(.noteBox)::before {
    margin-bottom: 10px;
}

.noteBox.writeUp::before {
    margin: -50px 0 10px 0;
}

.noteBox {
    border: solid 1px rgb(var(--theme-col));
    background-color: #fff;
    padding: 6px 12px;
    overflow-y: auto;
	min-height: 35px;
	margin-bottom: 40px;
	overflow-wrap: break-word;
}

.noteBox.writeUp {
	padding: 65px 12px 12px 12px;
}

iframe {
    width: 100%;
    border: solid 2px rgb(var(--theme-col));
    height: 300px;
    margin-top: -1.9em;
    margin-bottom: 2em;
}

.iframe::before {
    content: "Web page";
    font-weight: bolder;
    font-size: 5em;
    color: rgb(var(--theme-col));
    position: relative;
}

@media print {	
  .col-md-9 {
    width: 100%;
  }

  #TOC {
	display: none;
  }
  
  .why::before {
	transform: translateX(85%);
  }
  
  blockquote {
    border: none;
  }
  
  .writeUp, .solText, .noteBox, .solution, .why, .warn {
    page-break-inside:avoid
  }
  
  body {
    font-size: 9pt;    
    margin: 0;        
  }
    
  code {
    font-size: 10pt;
  }
    
  pre {
   font-size: 9pt;
  }
    
  h1.title {
    font-size: 20pt;
  }
  
  h1 {
    font-size: 17pt;
  }
  
  h2 {
    font-size: 15pt;
  }
  
  h3 {
    font-size: 13pt;
  }
    
  h4 {
    font-size: 11pt;
  }
  
  h5, h6 {
    font-size: 10pt;
  }
  
  .noteBox.writeUp::before, .solution pre.sourceCode::before, .writeUp:not(.noteBox)::before, why::before {
    font-size: 11pt;      
  }
  
  .solText .why {
    border: 1pt solid rgb(var(--theme-col)) !important;
    background-color: rgba(var(--theme-col), .2) !important;
  }
  
  body {
    margin: 0;
  }
  
  .warn > h3, .warn > h4, .warn > h5, .solText > title {
    font-size: 13pt;
  }
    
  .math.inline {
    font-size: 8pt !important;
  }
}


.math.inline {
    font-size: 10pt !important;
}

.table > thead {
    border-top: 1px solid rgba(var(--font-col), .66);
    border-bottom: 1px solid rgba(var(--font-col), .66);
}

.table > tbody {
    border-bottom: 1px solid rgba(var(--font-col), .66);
}

.table > tbody > tr > td, .table > tbody > tr > th,
.table > tfoot > tr > td, .table > tfoot > tr > th,
.table > thead > tr > td, .table > thead > tr > th {
    border-top: 0;
}

.table > thead > tr > th {
    border-bottom: 0;
}

caption {
    color: rgb(var(--font-col));
}

</style>

